@@ -43,14 +43,17 @@ import org.traccar.storage.query.Condition;
 import org.traccar.storage.query.Request;
 import reactor.core.publisher.Mono;
 
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 @Singleton
 public class McpServerHolder implements AutoCloseable {
 
     public static final String PATH = "/api/mcp";
+
+    private static final McpSchema.ToolAnnotations READ_ONLY_ANNOTATIONS = new McpSchema.ToolAnnotations(
+            null, true, false, true, false, null);
 
     private final Storage storage;
     private final Provider<PermissionsService> permissionsService;
@@ -104,20 +107,22 @@ public class McpServerHolder implements AutoCloseable {
     private McpServerFeatures.AsyncToolSpecification createVersionTool() {
 
         var inputSchema = new McpSchema.JsonSchema(
-                "object", Collections.emptyMap(), null, null, null, null);
+                "object", Map.of(), null, null, null, null);
 
         var toolSchema = McpSchema.Tool.builder()
                 .name("traccar-version")
                 .title("Returns server version name")
                 .inputSchema(inputSchema)
+                .annotations(READ_ONLY_ANNOTATIONS)
                 .build();
 
         return McpServerFeatures.AsyncToolSpecification.builder()
                 .tool(toolSchema)
                 .callHandler((context, request) -> {
                     String version = getClass().getPackage().getImplementationVersion();
-                    var result = new McpSchema.CallToolResult(version != null ? version : "Unknown", false);
-                    return Mono.just(result);
+                    return Mono.just(McpSchema.CallToolResult.builder()
+                            .addTextContent(version != null ? version : "Unknown")
+                            .build());
                 })
                 .build();
     }
@@ -125,18 +130,19 @@ public class McpServerHolder implements AutoCloseable {
     private McpServerFeatures.AsyncToolSpecification createDevicePositionTool() {
 
         var deviceIdSchema = new McpSchema.JsonSchema(
-                "number", Collections.emptyMap(), null, null, null, null);
+                "number", Map.of(), null, null, null, null);
 
         var inputSchema = new McpSchema.JsonSchema(
                 "object",
                 Map.of("deviceId", deviceIdSchema),
-                Collections.singletonList("deviceId"),
+                List.of("deviceId"),
                 null, null, null);
 
         var toolSchema = McpSchema.Tool.builder()
                 .name("device-position")
                 .title("Returns latest device position with address and other parameters")
                 .inputSchema(inputSchema)
+                .annotations(READ_ONLY_ANNOTATIONS)
                 .build();
 
         return McpServerFeatures.AsyncToolSpecification.builder()
@@ -184,7 +190,6 @@ public class McpServerHolder implements AutoCloseable {
 
             return Mono.just(McpSchema.CallToolResult.builder()
                     .structuredContent(position)
-                    .isError(false)
                     .build());
         } catch (StorageException | SecurityException e) {
             return Mono.just(errorResult(e.getMessage()));
